// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as column 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c2:hover {
  background-color: rgba(0,3,6,0.04);
}

.c2:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c3 > :not(:first-child) {
  margin-left: 8px;
}

.c4 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c1 {
  border-radius: 0;
  border-bottom-width: 0;
}

.c1:first-of-type {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c1:last-of-type {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-width: 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <button
    className="c1 c2"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="c1 c2"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 2
      </span>
    </span>
  </button>
</div>
`;

exports[`renders when disabled 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
  opacity: 0.5;
  pointer-events: none;
}

.c2:hover {
  background-color: rgba(0,3,6,0.04);
}

.c2:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c3 > :not(:first-child) {
  margin-left: 8px;
}

.c4 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c1 {
  border-radius: 0;
  border-right-width: 0;
}

.c1:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c1:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-right-width: 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  className="c0"
>
  <button
    className="c1 c2"
    disabled={true}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={-1}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="c1 c2"
    disabled={true}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={-1}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 2
      </span>
    </span>
  </button>
</div>
`;

exports[`renders with disabled children 1`] = `
.c5 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c5:hover {
  background-color: rgba(0,3,6,0.04);
}

.c5:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
  opacity: 0.5;
  pointer-events: none;
}

.c2:hover {
  background-color: rgba(0,3,6,0.04);
}

.c2:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c3 > :not(:first-child) {
  margin-left: 8px;
}

.c4 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c1 {
  border-radius: 0;
  border-right-width: 0;
}

.c1:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c1:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-right-width: 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  className="c0"
>
  <button
    className="c1 c2"
    disabled={true}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={-1}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="c1 c5"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 2
      </span>
    </span>
  </button>
</div>
`;

exports[`renders with non-button children 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c2:hover {
  background-color: rgba(0,3,6,0.04);
}

.c2:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c3 > :not(:first-child) {
  margin-left: 8px;
}

.c4 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c1 {
  border-radius: 0;
  border-right-width: 0;
}

.c1:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c1:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-right-width: 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  className="c0"
>
  <button
    className="c1 c2"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="c1 c2"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 2
      </span>
    </span>
  </button>
  <span>
    Span
  </span>
</div>
`;

exports[`renders without crashing 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c2:hover {
  background-color: rgba(0,3,6,0.04);
}

.c2:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c3 > :not(:first-child) {
  margin-left: 8px;
}

.c4 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c1 {
  border-radius: 0;
  border-right-width: 0;
}

.c1:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c1:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-right-width: 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  className="c0"
>
  <button
    className="c1 c2"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="c1 c2"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c3"
    >
      <span
        className="c4"
      >
        Button 2
      </span>
    </span>
  </button>
</div>
`;
